--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -39,6 +39,7 @@ a {
     cursor: pointer;
     color: #000;
 }
+div.Arduinode { overflow-y: hidden; }
 .center {
   margin: auto;
   position: absolute;
@@ -145,10 +146,6 @@ table.adminfalse tr {
 .container > div ul:first-child {
     top:7px;
 }
-header{
-  position: fixed;
-  width: 100%;
-}
 .headerIcons {
     float: right;
     top: 6px;
@@ -163,59 +160,17 @@ header{
 .headerIcons li:last-child {
     width:30px;
 }
-.footer .listIcons li:last-child {
-    margin-top:-5px;
-}
+
 .headerIcons li a{
   margin:0;
   display:inline-block;
 }
-
-header a.back {
-    position:absolute;
-    left:7px;
-    top:10px;
-}
-header li.iconReloj a {
-     font-size: 1.8em !important;
-}
-header .iconMAS, header .iconR { margin-top:5px !important; }
 
 .headerIcons li a.menu
 {
   margin-top:8px;
 }
 
-header, .footer {
-    background-color: #03ae74;
-    width: 100%;
-    height: 50px;
-    text-align: left;
-    top: 0;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-}
-.footer {
-    bottom:0;
-    top:auto;
-}
-.footer .listIcons {
-    padding:3px 7px;
-}
-.footer .listIcons li {
-    width:35px;
-    margin-right:20px;
-    padding-top:10px;
-}
-.footer .listIcons .iconReloj {
-    width:95px;
-}
-header h1 {
-    position:absolute;
-    top:0;
-    left:0;
-}
 a[class*="icon"], li[class*="icon"] a {
     color:#fff;
     font-size:1.3em; 
@@ -289,8 +244,8 @@ li.iconReloj a:before { content: "\23f1" }
 }
 .menu:after { content: "\2630"; }
 .controlPersianas {
-    width:180px;
-    margin:-8px 0 0 -24px;
+    width: 156px;
+    margin: -7px 0 0 0px;
 }
 .controlPersianas li {
     display:inline-block;
@@ -317,6 +272,37 @@ input.validfalse {
 /* MENU APLICACION*/
 header {
     background-color: #03ae74;
+    text-align: left;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+}
+header h1 {
+    display: block;
+    color: #fff;
+    padding-top:15px;
+    margin-left: 35px;
+    position:absolute;
+    top:0;
+    left:0;
+}
+header #loading div {
+    margin: -8px auto;
+}
+header a.back {
+    position:absolute;
+    left:7px;
+    top:10px;
+}
+header li.iconReloj a {
+     font-size: 1.8em !important;
+}
+header .iconMAS, header .iconR { margin-top:5px !important; }
+
+header, .footer {
+    background-color: #03ae74;
     width: 100%;
     height: 50px;
     text-align: left;
@@ -325,15 +311,27 @@ header {
     z-index: 1;
     left: 0;
 }
-header h1 {
-    display: block;
-    color: #fff;
-    padding-top:15px;
-    margin-left: 35px;
+
+.footer {
+    bottom:0;
+    top:auto;
 }
-header #loading div {
-    margin: -8px auto;
+.footer .listIcons {
+    padding:3px 7px;
 }
+.footer .listIcons li {
+    width:35px;
+    margin-right:20px;
+    padding-top:10px;
+}
+
+.footer .listIcons li:last-child {
+    margin-top:-5px;
+}
+.footer .listIcons .iconReloj {
+    width:95px;
+}
+
 .menuList li {
     margin: 15px 5px;
 }
@@ -397,7 +395,7 @@ table.dispositivos ul li a {
     color:#03ae74;
 }
 table.dispositivos tr td div {
-    width:60%;
+    width:83%;
 }
 
 table.dispositivos td {
