--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -39,13 +39,15 @@ a {
     cursor: pointer;
     color: #000;
 }
-div.Arduinode { overflow-y: hidden; }
+div.Arduinode { overflow: hidden; }
 .center {
   margin: auto;
   position: absolute;
   top: 0; left: 0; bottom: 0; right: 0;
 }
-.showfalse {
+.showfalse, 
+td.editRowfalse a,
+table.adminfalse tr td {
     display:none !important;
 }
 
@@ -65,9 +67,6 @@ td.editRowtrue a {
     color:green;
     font-size:2em;
     margin-left:10px;
-}
-td.editRowfalse a {
-    display: none;
 }
 
 label {
@@ -124,9 +123,6 @@ td.middle + td{
 }
 .container {
     padding:15px 7px;
-}
-table.adminfalse tr td {
-    display:none;
 }
 table.adminfalse tr td:first-child, 
 table.adminfalse tr td:last-child {
@@ -221,16 +217,12 @@ li.iconReloj a span {
 li .iconLogin:before {
     content: "\2699";
 }
-li .iconLogin {
+li .iconLogin, li .iconLogout {
     font-size:1.8em;
     padding-top:2px;
 }
 li .iconLogout:before {
     content: "\2B05";
-}
-li .iconLogout {
-    font-size:1.8em;
-    padding-top:2px;
 }
 li.iconReloj a:before { content: "\23f1" }
 .iconDELETE { color:red !important; }
@@ -250,6 +242,9 @@ li.iconReloj a:before { content: "\23f1" }
 .controlPersianas li {
     display:inline-block;
     width:30%;
+}
+.controlPersianas li:nth-child(2) {
+    width:40px;
 }
 .controlPersianas a[class*=icon] {
     font-size:2.2em;
@@ -274,6 +269,7 @@ header {
     background-color: #03ae74;
     text-align: left;
     position: fixed;
+    z-index: 5;
     top: 0;
     left: 0;
     width: 100%;
@@ -283,13 +279,10 @@ header h1 {
     display: block;
     color: #fff;
     padding-top:15px;
-    margin-left: 35px;
+    margin-left: 12px;
     position:absolute;
     top:0;
     left:0;
-}
-header #loading div {
-    margin: -8px auto;
 }
 header a.back {
     position:absolute;
@@ -331,7 +324,9 @@ header, .footer {
 .footer .listIcons .iconReloj {
     width:95px;
 }
-
+.footer #loading div {
+    margin: -8px auto;
+}
 .menuList li {
     margin: 15px 5px;
 }
@@ -372,18 +367,16 @@ button,
 }
 /*DISPOSITIVOS*/
 table.dispositivos.adminfalse tr {
-    height:45px;
-}
-table.dispositivos.adminfalse tr td{
-    display:none;
+    height:65px;
+    padding: 5px 0;
 }
 table.dispositivos.adminfalse tr td:first-child,
 table.dispositivos.adminfalse tr td:last-child
 {
-    display:block;
+    display:block !important;
 }
 table.adminfalse.dispositivos tr td:last-child {
-    margin-top:-22px;
+    margin-top:-38px;
 }
 .popup.dispositivos {
     width: 300px;
@@ -451,17 +444,14 @@ table.dispositivos tr td:last-child {
 table.dispositivos .listIcons li{
     margin-left:30px;
 }
-table.dispositivos .listIcons {
-    padding-top: 5px;
-}
 .iconEdit {
     font-size:2em !important;
 }
 /*SALIDAS*/
 table.salidas tr {
     width: 100%;
-    height:42px;
-    padding:0 0 2px 5px;
+    height:70px;
+    padding: 21px 0 0px 5px;
 }
 table.salidas tr td:last-child {
     float:right;
@@ -558,10 +548,7 @@ table.tareas tr {
     padding: 0;
     width: 100%;
 }
-table.tareas tr div {
-    width:100%;
-}
-table tr.icons td {
+table.tareas tr div, table tr.icons td {
     width:100%;
 }
 table td ul li.iconReloj a {
