--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -122,11 +122,11 @@ td.middle + td{
     text-align:right;
 }
 .container {
-    padding:15px 7px;
+    padding:36px 7px;
 }
 table.adminfalse tr td:first-child, 
 table.adminfalse tr td:last-child {
-    display:block;
+    display:block !important;
 }
 table.adminfalse tr {
     height:45px;
@@ -273,7 +273,6 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    height: 50px;
 }
 header h1 {
     display: block;
@@ -297,20 +296,23 @@ header .iconMAS, header .iconR { margin-top:5px !important; }
 header, .footer {
     background-color: #03ae74;
     width: 100%;
-    height: 50px;
+    height: 54px;
     text-align: left;
     top: 0;
     position: fixed;
     z-index: 1;
     left: 0;
+    font-size:1.22em;
 }
 
 .footer {
+    height: 75px;
     bottom:0;
     top:auto;
+    font-size: 1em;
 }
 .footer .listIcons {
-    padding:3px 7px;
+    padding: 16px 13px;
 }
 .footer .listIcons li {
     width:35px;
@@ -370,11 +372,21 @@ table.dispositivos.adminfalse tr {
     height:65px;
     padding: 5px 0;
 }
+table.dispositivos.admintrue .listIcons {
+    margin-top:-19px;
+}
+table.dispositivos.admintrue .listIcons li{
+    margin-left:40px;
+}
 table.dispositivos.adminfalse tr td:first-child,
 table.dispositivos.adminfalse tr td:last-child
 {
     display:block !important;
 }
+table.tareaDispositivos tr {
+    height:50px;
+    padding-top:35px;
+} 
 table.adminfalse.dispositivos tr td:last-child {
     margin-top:-38px;
 }
@@ -548,6 +560,9 @@ table.tareas tr {
     padding: 0;
     width: 100%;
 }
+table.tareas.adminfalse tr {
+    height:67px;
+}
 table.tareas tr div, table tr.icons td {
     width:100%;
 }
@@ -579,6 +594,7 @@ table.tareas.adminfalse tr.icons ul li {
 }
 .icons .listIcons {
     text-align:center;
+    padding-top: 25px;
 }
 .col3 td {
     width:32%;
