--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -80,7 +80,7 @@ select {
     border-radius: 2px;
     padding: 3px;
 }
-h1 { font-size: 1em; }
+h1 { font-size: .84em; }
 div.left {
     float: left;
     width: 100%;
@@ -211,8 +211,10 @@ li.iconReloj a  {
     font-size: 1.8em!important;
 }
 li.iconReloj a span {
-    margin-left:4px;
-    font-size: .7em!important;
+    position: absolute;
+    font-size: .5em!important;
+    top: 25px;
+    left: 41px;
 }
 li .iconLogin:before {
     content: "\2699";
@@ -298,21 +300,21 @@ header, .footer {
     width: 100%;
     height: 54px;
     text-align: left;
-    top: 0;
     position: fixed;
-    z-index: 1;
+    top: 0;
     left: 0;
+    z-index: 2;
     font-size:1.22em;
 }
 
 .footer {
-    height: 75px;
+    height: 62px;
     bottom:0;
     top:auto;
     font-size: 1em;
 }
 .footer .listIcons {
-    padding: 16px 13px;
+    padding: 5px 13px;
 }
 .footer .listIcons li {
     width:35px;
