--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -1,32 +1,4 @@
-html,
-body,
-div,
-span,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-a,
-strike,
-center,
-ul,
-li,
-form,
-label,
-table,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-header,
-menu,
-nav,
-mark{
+html,body,div,span,h1,h2,h3,h4,h5,h6,p,a,strike,center,ul,li,form,label,table,tbody,tfoot,thead,tr,th,td,header,menu,nav,mark {
     margin: 0;
     padding: 0;
     text-decoration: none;
@@ -39,48 +11,54 @@ a {
     cursor: pointer;
     color: #000;
 }
-div.Arduinode { overflow: hidden; }
+div.Arduinode {
+    overflow: hidden;
+}
 .center {
-  margin: auto;
-  position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
 }
-.showfalse, 
-td.editRowfalse a,
-table.adminfalse tr td {
-    display:none !important;
+.showfalse,td.editRowfalse a,table.adminfalse tr td {
+    display: none !important;
 }
-
 table {
     width: 100%;
-    margin-bottom:20px;
+    margin-bottom: 20px;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 table td {
-    display:inline-block;
+    display: inline-block;
     text-align: left;
 }
 table tr td h4 {
     margin: 12px 8px;
 }
 td.editRowtrue a {
-    float:right;
+    float: right;
     color: #C4EDDE;
-    font-size:2em;
-    margin-left:10px;
+    font-size: 2em;
+    margin-left: 10px;
+    position: absolute;
+    right: -50px;
+    top: 0;
 }
-
 label {
     padding: 10px 0;
-    font-weight:bold;
+    font-weight: bold;
 }
-input[type="text"],
-textarea,
-select {
+input[type="text"],textarea,select {
     margin-top: 5px;
     border-radius: 2px;
     padding: 3px;
 }
-h1 { font-size: .84em; }
+h1 {
+    font-size: .84em;
+}
 div.left {
     float: left;
     width: 100%;
@@ -94,17 +72,13 @@ body {
     font-family: Arial;
     overflow-x: hidden;
     padding: 46px 0 !important;
-	font-size:18px;
+    font-size: 18px;
     width: 100%;
-    color:#384259;
+    color: #384259;
     margin: 0 auto;
 }
 ul {
     list-style: none;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
 }
 table tr {
     display: inline-block;
@@ -113,102 +87,116 @@ table tr {
     padding: 10px;
 }
 table td:last-child {
-    display:inline-block;
+    display: inline-block;
 }
-
 td.middle {
-    text-align:center;
+    text-align: center;
 }
-td.middle + td{
-    text-align:right;
+td.middle + td {
+    text-align: right;
 }
 .container {
-    padding:36px 7px;
+    padding: 36px 7px;
 }
-table.adminfalse tr td:first-child, 
-table.adminfalse tr td:last-child {
-    display:block !important;
+table.adminfalse tr td:first-child,table.adminfalse tr td:last-child {
+    display: block !important;
 }
 table.adminfalse tr {
-    height:45px;
+    height: 45px;
 }
 .disabledtrue {
-    color:grey;
-}
-/* ICONOS */
-.container > div ul {
-    right:60px;
+    color: grey;
 }
 
+.container > div ul {
+    right: 60px;
+}
 .container > div ul:first-child {
-    top:7px;
+    top: 7px;
 }
 .headerIcons {
     float: right;
     top: 6px;
-    right:7px;
+    right: 7px;
     position: relative;
 }
-
 .headerIcons li {
-    float:left;
-    width:70px;
+    float: left;
+    width: 70px;
 }
 .headerIcons li:last-child {
-    width:30px;
+    width: 30px;
 }
-
-.headerIcons li a{
-  margin:0;
-  display:inline-block;
+.headerIcons li a {
+    margin: 0;
+    display: inline-block;
 }
-
-.headerIcons li a.menu
-{
-  margin-top:8px;
+.headerIcons li a.menu {
+    margin-top: 8px;
 }
-
-a[class*="icon"], li[class*="icon"] a {
-    color:#fff;
-    font-size:1.3em; 
+a[class*="icon"],li[class*="icon"] a {
+    color: #fff;
+    font-size: 1.3em;
 }
-.listIcons{
-    display:inline-block;
-    z-index:2;
+.listIcons {
+    display: inline-block;
+    z-index: 2;
     padding: 20px 0 16px 0;
     width: 100%;
 }
-.listIcons li{
+.listIcons li {
     width: 20%;
-    float:left;    
+    float: left;
 }
-.iconDOWN:before { content: "\25BC" }
-.iconSTOP:before { content: "\25FC" }
-.iconUP:before { content: "\25B2" }
-.iconLAMP0:before { content:"\2600" }
+.iconDOWN:before {
+    content: "\25BC";
+}
+.iconSTOP:before {
+    content: "\25FC";
+}
+.iconUP:before {
+    content: "\25B2";
+}
+.iconLAMP0:before {
+    content: "\2600";
+}
 .iconLAMP1 {
-    margin-right:8px;
-    font-size:2em !important;
+    margin-right: 8px;
+    font-size: 2em !important;
 }
-.iconLAMP0 { 
-    color:#c1c100 !important; 
+.iconLAMP0 {
+    color: #c1c100 !important;
     font-size: 1.7em !important;
 }
-.iconLAMP1:before { content:"\25CF"; }
-.iconLAMP1:before{ color:grey !important; }
-.iconACTIVA0 { color:grey !important; }
-.iconACTIVA0:before { content: "\2610" }
-.iconACTIVA1:before { content: "\2611" }
-.iconMAS:before { content: "\271A" }
+.iconLAMP1:before {
+    content: "\25CF";
+    color: grey !important;
+}
+.iconACTIVA0 {
+    color: grey !important;
+}
+.iconACTIVA0:before {
+    content: "\2610";
+}
+.iconACTIVA1:before {
+    content: "\2611";
+}
+.iconACTIVA1 {
+    color:#384259 !important;
+}
+.iconMAS:before {
+    content: "\271A";
+}
 .iconMAS {
     font-size: 1.5em!important;
 }
-.iconOK{
-    font-size:2.1em !important;
+.iconOK {
+    font-size: 2.1em !important;
 }
-.iconOK:after { content: "\2713" }
-
-li.iconReloj a  {
+.iconOK:after {
+    content: "\2713";
+}
+li.iconReloj a {
     font-size: 1.8em!important;
 }
 li.iconReloj a span {
@@ -220,74 +208,84 @@ li.iconReloj a span {
 li .iconLogin:before {
     content: "\2699";
 }
-li .iconLogin, li .iconLogout {
-    font-size:1.8em;
-    padding-top:2px;
+li .iconLogin,li .iconLogout {
+    font-size: 1.8em;
+    padding-top: 2px;
 }
 li .iconLogout:before {
     content: "\2B05";
 }
-li.iconReloj a:before { content: "\23f1" }
-.iconDELETE { color:red !important; }
-.iconDELETE:after { content: "\2717" }
-.iconEdit:after { content: "\270D"; }
-
-.back:before { content: "\2770"; }
+li.iconReloj a:before {
+    content: "\23f1";
+}
+.iconDELETE {
+    color: red !important;
+}
+.iconDELETE:after {
+    content: "\2717";
+}
+.iconEdit:after {
+    content: "\270D";
+}
+.back:before {
+    content: "\2770";
+}
 .menu {
-    font-weight:bold;
+    font-weight: bold;
     top: 14px;
 }
-.menu:after { content: "\2630"; }
+.menu:after {
+    content: "\2630";
+}
 .controlPersianas {
     width: 156px;
     margin: -7px 0 0 0px;
 }
 .controlPersianas li {
-    display:inline-block;
-    width:30%;
+    display: inline-block;
+    width: 30%;
 }
 .controlPersianas li:nth-child(2) {
-    width:40px;
+    width: 40px;
 }
 .controlPersianas a[class*=icon] {
-    font-size:2.2em;
-    color:#384259 !important;
+    font-size: 2.2em;
+    color: #384259 !important;
 }
-/* ICONOS */
-/* FORM */
-input:valid,
-input[type='text'] {
-  border: 1px solid #C4EDDE;
+
+
+input:valid,input[type='text'] {
+    border: 1px solid #C4EDDE;
 }
 input[type=text] {
-    font-size:1em;
+    font-size: 1em;
     box-shadow: 5px 5px 5px #888888;
 }
-input:invalid,
-input.validfalse {
-  border: 1px solid red;
+input:invalid,input.validfalse {
+    border: 1px solid red;
 }
-/* MENU APLICACION*/
+
 header h1 {
     display: block;
     color: #fff;
-    padding-top:15px;
+    padding-top: 15px;
     margin-left: 12px;
-    position:absolute;
-    top:0;
-    left:0;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 header a.back {
-    position:absolute;
-    left:7px;
-    top:10px;
+    position: absolute;
+    left: 7px;
+    top: 10px;
 }
 header li.iconReloj a {
-     font-size: 1.8em !important;
+    font-size: 1.8em !important;
 }
-header .iconMAS, header .iconR { margin-top:5px !important; }
-
-header, .footer {
+header .iconMAS,header .iconR {
+    margin-top: 5px !important;
+}
+header,.footer {
     background-color: #F73859;
     width: 100%;
     height: 54px;
@@ -296,36 +294,34 @@ header, .footer {
     top: 0;
     left: 0;
     z-index: 2;
-    font-size:1.22em;
+    font-size: 1.22em;
 }
-
 .footer {
     height: 62px;
-    bottom:0;
-    top:auto;
+    bottom: 0;
+    top: auto;
     font-size: 1em;
     background: #384259;
 }
 .footer h3 {
-    position:absolute;
-    color:#fff;
-    right:12px;
-    top:22px;
+    position: absolute;
+    color: #fff;
+    right: 12px;
+    top: 22px;
 }
 .footer .listIcons {
     padding: 5px 13px;
 }
 .footer .listIcons li {
-    width:35px;
-    margin-right:20px;
-    padding-top:10px;
+    width: 35px;
+    margin-right: 20px;
+    padding-top: 10px;
 }
-
 .footer .listIcons li:last-child {
-    margin-top:-5px;
+    margin-top: -5px;
 }
 .footer .listIcons .iconReloj {
-    width:95px;
+    width: 95px;
 }
 #loading {
     bottom: 8px;
@@ -340,16 +336,14 @@ header, .footer {
     margin: 15px 5px;
 }
 
-/*CasaCtrl HOME*/
-button,
-.button {
+button,.button {
     font-size: 1em;
     background: #fff;
-    border:1px solid #384259;
+    border: 1px solid #384259;
     color: #384259;
     display: block;
     border-radius: 3px;
-    min-width:60px !important;
+    min-width: 60px !important;
     font-weight: bold;
     padding: 13px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
@@ -357,155 +351,141 @@ button,
 .popup {
     box-shadow: 0px 0px 0px 1000px rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     border-radius: 6px;
-    width:90%;
-    border:2px solid #384259;
-    text-align:center;
-    margin:20px auto;
-    background:#fff;
-    position:fixed;
-    z-index:5;
+    width: 90%;
+    border: 2px solid #384259;
+    text-align: center;
+    margin: 20px auto;
+    background: #fff;
+    position: fixed;
+    z-index: 5;
 }
-.popup *{
-    width:auto;
-    margin:30px 10px 0 10px;
+.popup * {
+    width: auto;
+    margin: 30px 10px 0 10px;
 }
 .popup input {
-    padding:10px;
-    width:80%;
+    padding: 10px;
+    width: 80%;
 }
 .popup input:last-child {
-    margin-bottom:30px;
+    margin-bottom: 30px;
 }
-/*DISPOSITIVOS*/
+
 table.dispositivos.adminfalse tr {
-    height:65px;
+    height: 65px;
     padding: 5px 0;
 }
 table.dispositivos.admintrue .listIcons {
-    margin-top:-19px;
+    margin-top: -19px;
 }
-table.dispositivos.admintrue .listIcons li{
-    margin-left:40px;
+table.dispositivos.admintrue .listIcons li {
+    margin-left: 40px;
 }
-table.dispositivos.adminfalse tr td:first-child,
-table.dispositivos.adminfalse tr td:last-child
-{
-    display:block !important;
+table.dispositivos.adminfalse tr td:first-child,table.dispositivos.adminfalse tr td:last-child {
+    display: block !important;
 }
 table.tareaDispositivos tr {
-    height:50px;
-    padding-top:35px;
-} 
+    height: 50px;
+    padding-top: 35px;
+}
 table.adminfalse.dispositivos tr td:last-child {
-    margin-top:-38px;
+    margin-top: -38px;
 }
 .popup.dispositivos {
     width: 300px;
     height: 254px;
 }
-
 table.dispositivos ul li a {
     font-size: 3em;
     color: #384259;
     font-weight: bold;
 }
 table.dispositivos tr td div {
-    width:83%;
+    width: 83%;
 }
-
 table.dispositivos td {
-    padding:6px 5px 0px 5px;
+    padding: 6px 5px 0px 5px;
 }
-
 table.dispositivos td:last-child {
     float: right;
 }
-table tr td div{
-    width:50%;
-    position:relative;
-    display:inline-block;
+table tr td div {
+    width: 50%;
+    position: relative;
+    display: inline-block;
 }
-
-td.editRowtrue a {
-    position:absolute;
-    right:-50px;
-    top:0;
-}
-
 table.dispositivos tr {
     position: relative;
     height: 84px;
     width: 100%;
     padding: 1px;
 }
-table.dispositivos tr .iconEdit{
+table.dispositivos tr .iconEdit {
     position: absolute;
     top: 0;
-    right:0;
+    right: 0;
     padding: .2em .5em;
 }
 table.dispositivos tr td {
-    display:block;
-    height:22%;
-    font-size:.8em;
+    display: block;
+    height: 22%;
+    font-size: .8em;
 }
 table.dispositivos tr td h4 {
-    margin:0;
+    margin: 0;
 }
-table.dispositivos tr td div input{
-    float:left;
-    width:100%;
+table.dispositivos tr td div input {
+    float: left;
+    width: 100%;
 }
 table.dispositivos tr td:first-child {
-    font-size:1em;
+    font-size: 1em;
 }
 table.dispositivos tr td:last-child {
     margin: -57px 0;
 }
-
-table.dispositivos .listIcons li{
-    margin-left:30px;
+table.dispositivos .listIcons li {
+    margin-left: 30px;
 }
 .iconEdit {
-    font-size:2em !important;
+    font-size: 2em !important;
 }
-/*SALIDAS*/
+
 table.salidas tr {
     width: 100%;
-    height:70px;
+    height: 70px;
     padding: 21px 0 0px 5px;
 }
 table.salidas tr td:last-child {
-    float:right;
-    padding:8px 0 0 0;
-    margin-right:10px;    
+    float: right;
+    padding: 8px 0 0 0;
+    margin-right: 10px;
 }
-table.salidas td{
-    display:inline-block;
-    border:none !important;
+table.salidas td {
+    display: inline-block;
+    border: none !important;
 }
-
 table.salidas td h4 {
     padding: 0;
-    float:left;
+    float: left;
 }
-table.salidas > tr td div{
-    width:50%;
-    position:relative;
-    display:inline-block;
+table.salidas > tr td div {
+    width: 50%;
+    position: relative;
+    display: inline-block;
 }
 table.salidas tr td > div {
-    width:100%;
+    width: 100%;
 }
 table.salidas td:last-child {
     padding: 12px;
     width: 120px;
 }
 .popup.temporizacion {
-    height:170px;
+    height: 170px;
 }
 .switchContainer {
-    position:relative;
+    position: relative;
     width: 122px !important;
 }
 .switchContainer span {
@@ -517,23 +497,22 @@ table.salidas td:last-child {
     top: 5px;
     text-align: left;
 }
-.temporizadafalse span,
-.temporizadanull span {
-    display:none;
+.temporizadafalse span,.temporizadanull span {
+    display: none;
 }
 .temporizadatrue .on:after {
-    content:"" !important;
+    content: "" !important;
 }
 .switch {
-    position:relative;
+    position: relative;
     width: 126px !important;
 }
 .switch:after {
-    position:absolute;
-    top:4px;
-    left:35px;
+    position: absolute;
+    top: 4px;
+    left: 35px;
     content: "Apagada";
-    left:36px;
+    left: 36px;
 }
 .switch.on:after {
     content: "Encendida";
@@ -542,34 +521,36 @@ table.salidas td:last-child {
 }
 .switch.on {
     background: #F73859 !important;
-    color:#fff;
+    color: #fff;
 }
 .switch.on .switch-toggle {
     left: 99px !important;
 }
 .switch-toggle {
-    left:0px !important;
+    left: 0px !important;
 }
 
 @media screen and (max-width: 350px) {
-    table.salidas td input{
-        width:100% !important;
+
+    table.salidas td input {
+        width: 100% !important;
     }
 }
 
-/* Tareas */
+
 table.tareas tr td:last-child a {
-    font-size:2.1em;
+    font-size: 2.1em;
 }
 table.tareas tr {
     padding: 0;
     width: 100%;
 }
 table.tareas.adminfalse tr {
-    height:67px;
+    height: 67px;
+    position: relative;
 }
-table.tareas tr div, table tr.icons td {
-    width:100%;
+table.tareas tr div,table tr.icons td {
+    width: 100%;
 }
 table td ul li.iconReloj a {
     position: relative;
@@ -579,72 +560,65 @@ table td ul li.iconReloj a {
     font-size: 2.4em !important;
 }
 table.tareas.adminfalse .tareasIcons li {
-    display:none;
+    display: none;
 }
-table.tareas.adminfalse .tareasIcons li.iconReloj,
-table.tareas.adminfalse .tareasIcons li.iconReloj + li {
-    display:block;
-}
-table.tareas.adminfalse tr {
-    position:relative;
+table.tareas.adminfalse .tareasIcons li.iconReloj,table.tareas.adminfalse .tareasIcons li.iconReloj + li {
+    display: block;
 }
 table.tareas.adminfalse tr.icons {
-    position:absolute;
-    border:0;
-    width:100px;
-    right:0;
-    top:-12px;
+    position: absolute;
+    border: 0;
+    width: 100px;
+    right: 0;
+    top: -12px;
 }
 table.tareas.adminfalse tr.icons ul li {
-    width:50px;
+    width: 50px;
 }
 .icons .listIcons {
-    text-align:center;
+    text-align: center;
     padding-top: 25px;
 }
 .col3 td {
-    width:32%;
+    width: 32%;
 }
-/*SUBTAREAS*/
+
 table.subtareas .col2 input {
     width: 97px;
 }
 table.subtareas .col3 td input {
-    margin:8px 0;
-    display:block;
+    margin: 8px 0;
+    display: block;
     width: 71px;
 }
-table.subtareas .col3 td.middle input{
-    margin:8px auto;
+table.subtareas .col3 td.middle input {
+    margin: 8px auto;
 }
 table.subtareas tr.col2 td {
     width: 50%;
 }
 .col2 td {
-    width:20%;
+    width: 20%;
 }
 .col2 td:last-child {
-    text-align:right;
+    text-align: right;
 }
 table.subtareas .col3 td:last-child {
-    float:right;
-    width:77px;
+    float: right;
+    width: 77px;
 }
-/*Tarea dispositivos*/
-table.tareaDispositivos td:last-child, table tr {
+
+table.tareaDispositivos td:last-child,table tr {
     display: block;
 }
-table.dispositivos .listIcons li{
-    margin-left:30px;
-}
-table.tareaDispositivos tr td:last-child{
-    width:40px;
-    font-size:1.3em;
-    float:right;
+table.tareaDispositivos tr td:last-child {
+    width: 40px;
+    font-size: 1.3em;
+    float: right;
 }
 .tareaDispositivos .col2 td {
-    width:90%;
+    width: 90%;
 }
 table.tareaDispositivos.adminfalse .iconDELETE {
-    display:none;
+    display: none;
 }
