--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -75,6 +75,7 @@ body {
     font-size: 18px;
     width: 100%;
     color: #384259;
+    background: #fff;
     margin: 0 auto;
 }
 ul {
@@ -306,7 +307,7 @@ header,.footer {
 .footer h3 {
     position: absolute;
     color: #fff;
-    right: 12px;
+    right: 32px;
     top: 22px;
 }
 .footer .listIcons {
