--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -576,6 +576,10 @@ table.tareas.adminfalse tr.icons {
 table.tareas.adminfalse tr.icons ul li {
     width: 50px;
 }
+table.tareas tr.disabledfalse {
+    border:green 1px solid;
+    box-shadow:0 8px 16px 0 green,0 6px 20px 0 rgba(10,10,10,.19);
+}
 .icons .listIcons {
     text-align: center;
     padding-top: 25px;
