--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -22,7 +22,7 @@ div.Arduinode {
     bottom: 0;
     right: 0;
 }
-.showfalse,td.editRowfalse a,table.adminfalse tr td {
+.showfalse,td.editRowfalse a{
     display: none !important;
 }
 table {
@@ -388,7 +388,7 @@ table.tareaDispositivos tr {
     padding-top: 35px;
 }
 table.adminfalse.dispositivos tr td:last-child {
-    margin-top: -38px;
+    margin-top: -75px;
 }
 .popup.dispositivos {
     width: 300px;
@@ -463,11 +463,7 @@ table.salidas tr td:last-child {
 table.salidas td {
     display: inline-block;
     border: none !important;
-}
-@media screen and (max-width:370px){
-    table.salidas td h4 {
-        max-width:170px;
-    }
+    width: 53%;
 }
 table.salidas td h4 {
     padding: 0;
