--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -339,7 +339,9 @@ header,.footer {
 .menuList li {
     margin: 15px 5px;
 }
-
+.menuList.adminfalse li.Config {
+    display: none;
+}
 button,.button {
     font-size: 1em;
     background: #fff;
@@ -628,4 +630,26 @@ table.tareaDispositivos tr td:last-child {
 }
 table.tareaDispositivos.adminfalse .iconDELETE {
     display: none;
+}
+/* Seccion configuracion*/
+.container .ajustes label  {
+    display:block;
+    margin-bottom:10px;
+}
+.container .ajustes label input {
+    display:block;
+}
+/* Log */
+.logContainer {
+    position:relative;
+    background:#000;
+    line-height:1.2em;
+    overflow-y:scroll;
+    overflow-x:hidden;
+}
+.logContainer p{
+    color:lime;
+    font-size:.7em;
+    position:relative;
+    word-break:break-word;
 }
