--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -397,10 +397,13 @@ button,.button {
 .popup input:last-child {
     margin-bottom: 30px;
 }
-
+table.dispositivos tr td:nth-child(2) {
+    padding-top:.7em;
+}
 table.dispositivos.adminfalse tr {
-    height: 65px;
-    padding: 5px 0;
+    box-sizing: border-box;
+    height:85px;
+    padding: 5px 10px 10px 10px;
 }
 .dispositivos .iconDELETE {;
     font-size:2.5em !important;
