solo actualiza el estado si se modifico el valor en el popup

--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -338,6 +338,7 @@ header,.footer {
 }
 .footer .listIcons li {
     width: 35px;
+    float: left;
     margin-right: 20px;
     padding-top: 10px;
 }
