Fix posicion switch en zonas

--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -760,7 +760,7 @@ input[type=time] {
     width: 80px !important;
 }
 /* ZONAS */
-.zonas .icons li{
+.zonas.admintrue .icons li{
     margin-left:35px;
 }
 table.zonas tr td:last-child {
